src/tui/render/snapshots/frame__tui__render__tag_color_popup__tests__tag_color_popup_picker_open.snap
---
source: src/tui/render/tag_color_popup.rs
expression: output
---








                   ┌ Tag Colors ────────────────────────────┐
                   │                                        │
                   │ ▶ core    ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  ×       │
                   │   design    (none)                     │
                   │                                        │
                   │←→ pick  Enter ✓  Bksp clear  Esc cancel│
                   └────────────────────────────────────────┘
