src/tui/render/snapshots/frame__tui__render__tag_color_popup__tests__tag_color_popup_visible.snap
---
source: src/tui/render/tag_color_popup.rs
expression: output
---








                   ┌ Tag Colors ────────────────────────────┐
                   │                                        │
                   │ ▶ core    ■ #FF0000                    │
                   │   design    (none)                     │
                   │   bug     ■ #00FF00                    │
                   │                                        │
                   │   Enter pick  Bksp clear  Esc close    │
                   └────────────────────────────────────────┘
